# TraceGate

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
docs/architecture/ADRs/: ADR-001-runtime-choice.md  ADR-002-proxy-architecture.md
examples/: claude_desktop_config.json  demo.sh  malicious_server.py  policy.yaml
examples/antigravity_sdk/: demo.py
examples/cursor_integration/: README.md
examples/docker_sse/: Dockerfile  README.md  docker-compose.yml  dummy_server.py
src/tracegate/: approval.py  audit.py  cli.py  dlp.py  installer.py  mcp.py  policy.py  proxy.py  replay.py  risk.py  sse.py  store.py
src/tracegate/dashboard/: __init__.py  api.py
src/tracegate/dashboard/static/: app.js  index.html  style.css
tests/: conftest.py  test_audit.py  test_cli.py  test_dashboard.py  test_dlp.py  test_installer.py  test_mcp.py  test_policy.py  test_proxy_e2e.py  test_replay.py  test_risk.py  test_sse.py  test_store.py
