[project]
name = "tracegate"
version = "0.1.0"
description = "Runtime firewall and stdio proxy for AI agents using MCP."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
tracegate = "tracegate.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff"
]
dashboard = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "jinja2>=3.1.2",
    "httpx>=0.28.1",
    "sse-starlette>=2.0.0"
]
